--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -1,8 +1,10 @@
 @layer reset, base, tokens, recipes, utilities;
 
 @layer reset {
-	body,
 	html {
+		height: 100%;
+	}
+	body {
 		min-height: 100%;
 	}
 }
